Redirecting from index.html to the controller /move

--- a/web/index.html
+++ b/web/index.html
@@ -6,16 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Tic Tac Toe</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Refresh" content="5; url=move" />
     </head>
     <body>
-        <div>TODO write content</div>
-        <form name="move" action="/move" method="POST">
-            <input type="text" name="cell" value="0" />
-            <input type="text" name="symbol" value="X" />
-            <input type="submit" value="Submit" name="submit" />
-        </form>
+        <h3>Redirecting to the game</h3>
     </body>
 </html>
